ajout du contraste footer contact et correction icon des footer

--- a/style.css
+++ b/style.css
@@ -54,13 +54,13 @@ figcaption {
 }
 
 .dark-button {
-    color: black!important;
-    background-color: #F3976C!important;
+    color: black;
+    background-color: #F3976C;
 }
 
 .dark-button:hover {
-    color: #F3976C!important;
-    background-color: #black!important;
+    color: #F3976C;
+    background-color: black;
 }
 
 div.row.row-no-gutters.social {
@@ -734,6 +734,14 @@ p {
 .cta-hero {
     margin-top: 22px;
     color: #FFFFFF!important;
+    text-transform: uppercase;
+    padding: 12px 28px 12px 28px;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.cta-hero-bt {
+    margin-top: 22px;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
